fix scroll navbar visibility add full page blog

--- a/components/UI/NormalButton.module.css
+++ b/components/UI/NormalButton.module.css
@@ -12,6 +12,7 @@
 .normalButton:active {
   padding: 2% 4%;
   font-size: 1rem;
+  transition: all 0.1s ease-out;
 }
 
 @media (hover: hover) {
